{{$NEXT}}

0.004     2024-12-03 10:30:12+00:00 UTC

  - Added timeout to `HTTP::Tiny`

0.003     2024-10-07 10:20:54+00:00 UTC
  - Updated `exchange_token` to support caller payload
0.002     2024-10-02 22:21:04+00:00 UTC
  - Bug fix in `validate_token` and `validate_id_token` methods.

0.001     2024-09-30 03:56:03+00:00 UTC
  - Initial release
  - get_login_request
  - accept_login_request
  - get_logout_request
  - accept_logout_request
  - exchange_token
  - fetch_jwks
  - fetch_openid_configuration
  - validate_token
  - validate_id_token
  - get_consent_request
  - accept_consent_request
  - revoke_login_sessions