@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+- Added reject_login_request method
+
 0.004     2024-12-03 10:30:12+00:00 UTC
 
   - Added timeout to `HTTP::Tiny`
